--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "~2.5.6",
     "express": "^4.16.3",
     "morgan": "^1.9.0",
+    "node-localstorage": "^1.3.1",
     "socket.io": "^2.1.1",
     "yargs": "*"
   }
