--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "morgan": "^1.9.0",
     "node-localstorage": "^1.3.1",
     "socket.io": "^2.1.1",
-    "yargs": "*"
+    "yargs": "*",
+	"node-localstorage": "^1.3.1"
   }
 }
