--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "apiai": "^4.0.3",
     "express": "4.13.4",
+    "mysql": "^2.16.0",
     "nodemailer": "0.7.1",
     "socket.io": "1.4.6"
   }
