--- a/config.json
+++ b/config.json
@@ -1,3 +1,7 @@
 {
-	"how_are_you_interval" : 12
+	"how_are_you_interval" : 12,
+	"db_host": "localhost",
+	"database": "mehadb",
+	"user": "meha",
+	"password": "Password1"
 }
