--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "4.13.4",
     "mysql": "^2.16.0",
     "nodemailer": "0.7.1",
-    "socket.io": "1.4.6"
+    "socket.io": "1.4.6",
+    "winston": "^3.1.0"
   }
 }
