--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "apiai": "^4.0.3",
-    "express": "4.13.4",
+    "express": "^4.16.4",
     "mysql": "^2.16.0",
     "nodemailer": "0.7.1",
     "socket.io": "1.4.6",
