--- a/server/config.json
+++ b/server/config.json
@@ -1,5 +1,10 @@
 {
 	"how_are_you_interval" : 12,
+	"reporting_time": 
+		{
+			"hour":23,
+			"minute":40
+		},
 	"db_host": "localhost",
 	"database": "mehadb",
 	"user": "meha",
