--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "apiai": "^4.0.3",
     "express": "^4.16.4",
     "mysql": "^2.16.0",
+    "node-schedule": "^1.3.0",
     "nodemailer": "0.7.1",
     "socket.io": "1.4.6",
     "winston": "^3.1.0"
