--- a/meha_tomcat/.project
+++ b/meha_tomcat/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>meha_tomcat</name>
+	<name>meha</name>
 	<comment></comment>
 	<projects>
 	</projects>
