Minor changes to conf

--- a/server/src/main/webapp/conf/config.json
+++ b/server/src/main/webapp/conf/config.json
@@ -1,12 +1,14 @@
 {
+	"chatbot_url":"http://localhost:3000",
+	"pushd_url":"http://localhost:8080/pushd",
+	"db_host": "localhost",
+	"database": "mehadb",
+	"user": "meha",
+	"password": "Password1",
 	"how_are_you_interval" : 12,
 	"reporting_time": 
 		{
 			"hour":23,
 			"minute":40
-		},
-	"db_host": "localhost",
-	"database": "mehadb",
-	"user": "meha",
-	"password": "Password1"
+		}
 }
