--- a/server/src/main/webapp/conf/config.json
+++ b/server/src/main/webapp/conf/config.json
@@ -1,6 +1,8 @@
 {
-	"chatbot_url":"http://localhost:3000",
-	"pushd_url":"http://localhost:8080/pushd",
+	"chatbot_url":"http://localhost:3000/",
+	"pushd_url":"http://localhost:8080/pushd/",
+	"pushd_api":"webapi/external",
+	"pushd_api_userinfo":"webapi/external/userInfo/tytuh6",
 	"db_host": "localhost",
 	"database": "mehadb",
 	"user": "meha",
