--- a/server/src/main/webapp/conf/config.json
+++ b/server/src/main/webapp/conf/config.json
@@ -1,5 +1,5 @@
 {
-	"chatbot_url":"http://localhost:3000/",
+	"chatbot_url":"http://localhost:3000/chatbot/",
 	"pushd_url":"http://localhost:8080/pushd/",
 	"pushd_api":"webapi/external",
 	"pushd_api_userinfo":"webapi/external/userInfo/tytuh6",
