--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node-schedule": "^1.3.0",
     "node-sentiment": "0.0.7",
     "nodemailer": "0.7.1",
+    "request": "^2.88.0",
     "sentiment": "^5.0.1",
     "socket.io": "1.4.6",
     "winston": "^3.1.0"
