push report start

--- a/server/src/main/webapp/conf/config.json
+++ b/server/src/main/webapp/conf/config.json
@@ -10,8 +10,8 @@
 	"how_are_you_interval" : 12,
 	"reporting_time": 
 		{
-			"hour":23,
-			"minute":52
+			"hour":12,
+			"minute":40
 		},
-	"doctor_email":"kavyakpuranik8@gmail.com"
+	"doctor_email":"minnuann5@gmail.com"
 }
