--- a/server/src/main/webapp/conf/config.json
+++ b/server/src/main/webapp/conf/config.json
@@ -10,8 +10,9 @@
 	"how_are_you_interval" : 12,
 	"reporting_time": 
 		{
-			"hour":12,
-			"minute":40
+			"hour": 15,
+			"minute": 18
 		},
-	"doctor_email":"minnuann5@gmail.com"
+	"doctor_email":"minnuann5@gmail.com",
+	"emergency_reciever":"minnuann5@gmail.com"
 }
