--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "request": "^2.88.0",
     "sentiment": "^5.0.1",
     "socket.io": "1.4.6",
-    "winston": "^3.1.0"
+    "winston": "^3.1.0",
+    "xml-parse": "^0.3.1"
   }
 }
