Renaming server to meha

--- a/meha/src/main/webapp/conf/config.json
+++ b/meha/src/main/webapp/conf/config.json
@@ -10,11 +10,13 @@
 	"how_are_you_interval" : 12,
 	"reporting_time": 
 		{
-			"hour": 22,
-			"minute": 10
+			"hour": 14,
+			"minute": 30
 		},
-	"doctor_email":"minnuann5@gmail.com",
-	"emergency_reciever":"minnuann5@gmail.com",
+	"chat_admin_email":"meha.nimhans@gmail.com",
+	"chat_admin_pass":"nimhans.meha1",
+	"doctor_email":"meha.nimhans@gmail.com",
+	"emergency_reciever":"meha.nimhans@gmail.com",
 	"webhook_dictionary":"http://services.aonaware.com/DictService/DictService.asmx/DefineInDict?dictId=wn&word=",
 	"webhook_match":"http://services.aonaware.com/DictService/DictService.asmx/MatchInDict?dictId=wn&strategy=lev&word="
 }
