--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server/src/main/heroku.js"
+    "start": "node meha/src/main/server.js"
   },
   "keywords": [],
   "author": "",
@@ -18,8 +18,7 @@
     "express": "^4.16.4",
     "hashmap": "^2.3.0",
     "mysql": "^2.16.0",
-    "node-schedule": "^1.3.0",
-    "node-sentiment": "0.0.7",
+    "node-schedule": "^1.3.0"
     "nodemailer": "0.7.1",
     "request": "^2.88.0",
     "sentiment": "^5.0.1",
