--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.16.4",
     "hashmap": "^2.3.0",
     "mysql": "^2.16.0",
-    "node-schedule": "^1.3.0"
+    "node-schedule": "^1.3.0",
+    "node-sentiment": "0.0.7",
     "nodemailer": "0.7.1",
     "request": "^2.88.0",
     "sentiment": "^5.0.1",
