--- a/meha/src/main/webapp/conf/config.json
+++ b/meha/src/main/webapp/conf/config.json
@@ -10,18 +10,18 @@
 	"how_are_you_interval" : 12,
 	"reporting_time": 
 		{
-			"hour": 18,
-			"minute": 57
+			"hour": 19,
+			"minute": 12
 		},
 	"reporting_time2": 
 		{
-			"hour": 18,
-			"minute": 55
+			"hour": 19,
+			"minute": 15
 		},
 	"chat_admin_email":"meha.nimhans@gmail.com",
 	"chat_admin_pass":"nimhans.meha1",
-	"doctor_email":"minnuann5@gmail.com",
-	"emergency_reciever":"minnuann5@gmail.com",
+	"doctor_email":"meha.nimhans@gmail.com",
+	"emergency_reciever":"meha.nimhans@gmail.com",
 	"webhook_dictionary":"http://services.aonaware.com/DictService/DictService.asmx/DefineInDict?dictId=wn&word=",
 	"webhook_match":"http://services.aonaware.com/DictService/DictService.asmx/MatchInDict?dictId=wn&strategy=lev&word="
 }
