Location working for hospital details

--- a/meha/src/main/webapp/conf/config.json
+++ b/meha/src/main/webapp/conf/config.json
@@ -1,8 +1,9 @@
 {
-	"chatbot_url":"http://localhost:3000/chatbot/",
-	"pushd_url":"http://localhost:8080/pushd/",
-	"pushd_api":"webapi/external",
-	"pushd_api_userinfo":"webapi/external/userInfo/tytuh6",
+	"base_url":"http://localhost",
+	"chatbot_url":":3000/chatbot",
+	"pushd_url":":8080/pushd",
+	"pushd_api":"/webapi/external",
+	"pushd_api_userinfo":"/webapi/external/userInfo/tytuh6",
 	"db_host": "localhost",
 	"database": "mehadb",
 	"user": "meha",
