--- a/meha/src/main/webapp/conf/config.json
+++ b/meha/src/main/webapp/conf/config.json
@@ -1,7 +1,8 @@
 {
-	"base_url":"http://localhost",
-	"chatbot_url":":3000/chatbot",
-	"pushd_url":":8080/pushd",
+	"chatbot_baseurl":"http://localhost:3000",
+	"pushd_baseurl":"http://localhost:8080",
+	"chatbot_url":"/chatbot",
+	"pushd_url":"/pushd",
 	"pushd_api":"/webapi/external",
 	"pushd_api_userinfo":"/webapi/external/userInfo/tytuh6",
 	"db_host": "localhost",
