--- a/resources/nginx.conf
+++ b/resources/nginx.conf
@@ -53,8 +53,8 @@ http {
             proxy_pass http://localhost:3000/socket.io/;
         }
 		
-        location /meha {
-			rewrite ^/meha(.*) $1 break;
+        location /mha {
+			rewrite ^/mha(.*) $1 break;
             proxy_pass http://localhost:3000;
         }
 
