--- a/meha/src/main/webapp/conf/config.json
+++ b/meha/src/main/webapp/conf/config.json
@@ -22,8 +22,8 @@
 		},
 	"chat_admin_email":"meha.nimhans@gmail.com",
 	"chat_admin_pass":"nimhans.meha1",
-	"doctor_email":"meha.nimhans@gmail.com",
-	"emergency_reciever":"meha.nimhans@gmail.com",
+	"doctor_email":"minnuann5@gmail.com",
+	"emergency_reciever":"minnuann5@gmail.com",
 	"webhook_dictionary":"http://services.aonaware.com/DictService/DictService.asmx/DefineInDict?dictId=wn&word=",
 	"webhook_match":"http://services.aonaware.com/DictService/DictService.asmx/MatchInDict?dictId=wn&strategy=lev&word="
 }
