--- a/meha/src/main/webapp/conf/config.json
+++ b/meha/src/main/webapp/conf/config.json
@@ -1,7 +1,7 @@
 {
 	"chatbot_baseurl":"http://ehrcapps.iiitb.ac.in",
 	"pushd_baseurl":"http://ehrcapps.iiitb.ac.in",
-	"chatbot_url":"/chatbot",
+	"chatbot_url":"/mha/chatbot",
 	"pushd_url":"/pushd",
 	"pushd_api":"/webapi/external",
 	"pushd_api_userinfo":"/webapi/external/userInfo/tytuh6",
